--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "browser-sync-webpack-plugin": "2.0.1"
     },
     "dependencies": {
+        "moment": "^2.29.1",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2",
         "vuex-persistedstate": "^4.0.0-beta.3"
